--- a/bash/code/笔记.md
+++ b/bash/code/笔记.md
@@ -1,1 +1,39 @@
 
+使用vim编辑hello.sh 
+
+```$ vim hello.sh```
+
+  ```
+  # 使用shell来执行
+  $ sh hello.sh
+  # 使用bash来执行
+  $ bash hello.sh
+
+ 
+
+还可以让脚本本身就具有可执行权限，通过chmod命令可以修改
+
+# 赋予脚本的所有者该执行权限，允许该用户执行该脚本
+$ chmod u+rx hello.sh
+# 执行命令，这将使用脚本第一行指定的shell来执行，如果指定shell不存在，将使用系统默认shell来执行
+$  ./hello.sh
+
+#!是用于指定当前脚本的解释器
+
+bash 中的 source 命令用于在当前 bash 环境下读取并执行 FileName.sh 中的命令。
+
+.等价于 source 命令
+
+/文件名路径分隔符。
+
+\一种对单字符的引用机制
+
+:在与>重定向操作符结合使用时，将会把一个文件清空，但是并不会修改这个文件的权限。如果之前这个文件并不存在，那么就创建这个文件。
+
+使用双分号（;;）可以终止case选项。
+
+$  变量替换
+
+#小括号
+
+在括号中的命令列表，将会作为一个子 shell 来运行
